--- a/whistleblower-system/backend/package.json
+++ b/whistleblower-system/backend/package.json
@@ -19,6 +19,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "socket.io": "^4.8.1",
     "uuid": "^8.3.2"
   },
