--- a/whistleblower-system/user-portal/package.json
+++ b/whistleblower-system/user-portal/package.json
@@ -13,10 +13,12 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "wavesurfer.js": "^7.9.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
