--- a/chaincode/Whistleblower/build.gradle
+++ b/chaincode/Whistleblower/build.gradle
@@ -16,6 +16,9 @@ repositories {
 
 dependencies {
     implementation 'org.hyperledger.fabric-chaincode-java:fabric-chaincode-shim:2.2.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.5'
     implementation 'com.owlike:genson:1.5'
     api 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.google.guava:guava:28.2-jre'
