--- a/whistleblower-system/investigator-portal/package.json
+++ b/whistleblower-system/investigator-portal/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
